# computecpp-sdk

samples/example_sycl_application/: CMakeLists.txt  example_sycl_application.cpp  second_source_file.cpp
